fix pulling the body all the way over the footer on iPhone 5s and narrower

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -19,7 +19,7 @@
   }
 }
 
-@media (max-width: 316px) {
+@media (max-width: 324px) {
   .root {
     margin-bottom: 192px;
   }
